<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/nutriReport"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView1"
        android:text="@string/name"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView1"
        android:layout_toEndOf="@id/textView2"
        android:text="@string/undefined"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView2"
        android:text="@string/age"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView2"
        android:layout_alignStart="@id/textName"
        android:text="@string/undefined"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView3"
        android:text="@string/weight"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView3"
        android:layout_alignStart="@id/textName"
        android:text="@string/undefined"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView4"
        android:text="@string/height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView4"
        android:layout_alignStart="@id/textName"
        android:text="@string/undefined"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView5"
        android:text="@string/BMI"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView5"
        android:layout_alignStart="@id/textName"
        android:text="@string/undefined"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_below="@id/textView6"
        android:text="@string/rating"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
    <TextView
        android:id="@+id/textRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor2"
        android:layout_below="@id/textView6"
        android:layout_toEndOf="@id/textView7"
        android:text="@string/undefined"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize"/>
</RelativeLayout>
